fix: Добавляет телефон и ссылку на лого в футере

--- a/catalog.html
+++ b/catalog.html
@@ -249,8 +249,8 @@
         </a>
       </li>
     </ul>
-    <a class="footer-phone_link" href="#"></a>
-    <a class="footer-logo_link" href="#">
+    <a class="footer-phone_link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer-logo_link" href="https://htmlacademy.ru">
       <span class="visually-hidden">Сайт разработан компанией HTML Academy</span>
     </a>
   </footer>
