fix: Исправляет языковые настройки

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
         </a>
       </li>
       <li class="user-nav_item">
-        <a class="user-nav_link button" href="#">ХОЧУ СЮДА!</a>
+        <a class="user-nav_link button" href="#">Хочу сюда!</a>
       </li>
     </ul>
   </header>
@@ -140,7 +140,7 @@
             <img class="item_image" src="#" alt="Отель Amara Resort & Spa">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title">Amara Resort & Spa</h3>
+            <h3 class="item_title" lang="eng">Amara Resort & Spa</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">4000</span> ₽</p>
@@ -156,7 +156,7 @@
             <img class="item_image" src="#" alt="Отель Villas at Poco Diablo">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title">Villas at Poco Diablo</h3>
+            <h3 class="item_title" lang="eng">Villas at Poco Diablo</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">5000</span> ₽</p>
@@ -172,7 +172,7 @@
             <img class="item_image" src="#" alt="Отель Desert Quail Inn">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title">Desert Quail Inn</h3>
+            <h3 class="item_title" lang="eng">Desert Quail Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">2500</span> ₽</p>
@@ -188,7 +188,7 @@
             <img class="item_image" src="#" alt="Отель GreenTree Inn">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title">GreenTree Inn</h3>
+            <h3 class="item_title" lang="eng">GreenTree Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">1500</span> ₽</p>
