--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li class="user-nav_item">
-          <a class="user-nav_link button" href="#">ХОЧУ СЮДА!</a>
+          <a class="user-nav_link button" href="#">Хочу сюда!</a>
         </li>
       </ul>
     </header>
