fix: Исправляет написание атрибута lang

--- a/catalog.html
+++ b/catalog.html
@@ -140,7 +140,7 @@
             <img class="item_image" src="#" alt="Отель Amara Resort & Spa">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title" lang="eng">Amara Resort & Spa</h3>
+            <h3 class="item_title" lang="en">Amara Resort & Spa</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">4000</span> ₽</p>
@@ -156,7 +156,7 @@
             <img class="item_image" src="#" alt="Отель Villas at Poco Diablo">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title" lang="eng">Villas at Poco Diablo</h3>
+            <h3 class="item_title" lang="en">Villas at Poco Diablo</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">5000</span> ₽</p>
@@ -172,7 +172,7 @@
             <img class="item_image" src="#" alt="Отель Desert Quail Inn">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title" lang="eng">Desert Quail Inn</h3>
+            <h3 class="item_title" lang="en">Desert Quail Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">2500</span> ₽</p>
@@ -188,7 +188,7 @@
             <img class="item_image" src="#" alt="Отель GreenTree Inn">
           </a>
           <a class="item-title_link" href="#">
-            <h3 class="item_title" lang="eng">GreenTree Inn</h3>
+            <h3 class="item_title" lang="en">GreenTree Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
           <p class="item-price">От <span class="item-price_number">1500</span> ₽</p>
