fix: Добавляет открытие ссылок в новом окне

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
           <a class="item_link" href="#">О Седоне</a>
         </li>
         <li class="main-nav_item">
-          <a class="item_link" href="catalog.html">Гостиницы</a>
+          <a class="item_link" href="catalog.html" aria-current="page">Гостиницы</a>
         </li>
       </ul>
     </nav>
@@ -139,7 +139,7 @@
           <a class="item-image_link" href="#">
             <img class="item_image" src="#" alt="Отель Amara Resort & Spa">
           </a>
-          <a class="item-title_link" href="#">
+          <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Amara Resort & Spa</h3>
           </a>
           <p class="item-type">Гостиница</p>
@@ -155,7 +155,7 @@
           <a class="item-image_link" href="#">
             <img class="item_image" src="#" alt="Отель Villas at Poco Diablo">
           </a>
-          <a class="item-title_link" href="#">
+          <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Villas at Poco Diablo</h3>
           </a>
           <p class="item-type">Гостиница</p>
@@ -171,7 +171,7 @@
           <a class="item-image_link" href="#">
             <img class="item_image" src="#" alt="Отель Desert Quail Inn">
           </a>
-          <a class="item-title_link" href="#">
+          <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Desert Quail Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
@@ -187,7 +187,7 @@
           <a class="item-image_link" href="#">
             <img class="item_image" src="#" alt="Отель GreenTree Inn">
           </a>
-          <a class="item-title_link" href="#">
+          <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">GreenTree Inn</h3>
           </a>
           <p class="item-type">Гостиница</p>
@@ -234,23 +234,23 @@
   <footer>
     <ul class="social_list">
       <li class="social_item">
-        <a class="social_link" href="#">
+        <a class="social_link" href="#" target="_blank">
           <span class="visually-hidden">Страница «ВКонтакте»</span>
         </a>
       </li>
       <li class="social_item">
-        <a class="social_link" href="#">
+        <a class="social_link" href="#" target="_blank">
           <span class="visually-hidden">Канал в «Телеграме»</span>
         </a>
       </li>
       <li class="social_item">
-        <a class="social_link" href="#">
+        <a class="social_link" href="#" target="_blank">
           <span class="visually-hidden">Канал на YouTube</span>
         </a>
       </li>
     </ul>
-    <a class="phone_link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    <a class="site-developer_link" href="https://htmlacademy.ru">
+    <a class="phone_link" href="tel:+78128121212" target="_blank">+7 (812) 812-12-12</a>
+    <a class="site-developer_link" href="https://htmlacademy.ru" target="_blank">
       <span class="visually-hidden">Сайт разработан компанией HTML Academy</span>
     </a>
   </footer>
