--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="header_nav">
         <ul class="main-nav_list">
           <li class="main-nav_item">
-            <a class="item_link" href="index.html">Главная</a>
+            <a class="item_link" href="index.html" aria-current="page">Главная</a>
           </li>
           <li class="main-nav_item">
             <a class="item_link" href="#">О Седоне</a>
@@ -117,23 +117,23 @@
     <footer>
       <ul class="social_list">
         <li class="social_item">
-          <a class="social_link" href="#">
+          <a class="social_link" href="#" target="_blank">
             <span class="visually-hidden">Страница «ВКонтакте»</span>
           </a>
         </li>
         <li class="social_item">
-          <a class="social_link" href="#">
+          <a class="social_link" href="#" target="_blank">
             <span class="visually-hidden">Канал в «Телеграме»</span>
           </a>
         </li>
         <li class="social_item">
-          <a class="social_link" href="#">
+          <a class="social_link" href="#" target="_blank">
             <span class="visually-hidden">Канал на YouTube</span>
           </a>
         </li>
       </ul>
-      <a class="phone_link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="site-developer_link" href="https://htmlacademy.ru">
+      <a class="phone_link" href="tel:+78128121212" target="_blank">+7 (812) 812-12-12</a>
+      <a class="site-developer_link" href="https://htmlacademy.ru" target="_blank">
         <span class="visually-hidden">Сайт разработан компанией HTML Academy</span>
       </a>
     </footer>
