fix: Добавляет класс футеру

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
       </li>
     </ul>
   </header>
-  <main class="main-catalog">
+  <main class="main">
     <section class="filters-group">
       <h1 class="visually-hidden">Гостиницы Седоны</h1>
       <ul class="breadcrumps_list">
@@ -231,7 +231,7 @@
       </form>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <ul class="social_list">
       <li class="social_item">
         <a class="social_link" href="#" target="_blank">
