--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </form>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <ul class="social_list">
         <li class="social_item">
           <a class="social_link" href="#" target="_blank">
