feat: Добавляет ссылки на соцсети в футере

--- a/catalog.html
+++ b/catalog.html
@@ -234,17 +234,17 @@
   <footer class="footer" data-test="footer">
     <ul class="social_list">
       <li class="social_item">
-        <a class="social_link" href="#" target="_blank">
+        <a class="social_link" href="https://vk.com/htmlacademy" target="_blank">
           <span class="visually-hidden">Страница «ВКонтакте»</span>
         </a>
       </li>
       <li class="social_item">
-        <a class="social_link" href="#" target="_blank">
+        <a class="social_link" href="https://t.me/htmlacademy" target="_blank">
           <span class="visually-hidden">Канал в «Телеграме»</span>
         </a>
       </li>
       <li class="social_item">
-        <a class="social_link" href="#" target="_blank">
+        <a class="social_link" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
           <span class="visually-hidden">Канал на YouTube</span>
         </a>
       </li>
